complite side of main with trending and announcements, fix spacing of cards and overall distances and sizes

--- a/style.css
+++ b/style.css
@@ -7,13 +7,10 @@ body{
 }
 .container{
     display: grid;
-    grid-template-columns: 1fr 7fr;
-    grid-template-rows: 1fr 4fr;
+    grid-template-columns: 1fr 8fr;
+    grid-template-rows: 1fr 5fr;
 }
-a{
-    text-decoration: none;
-    color: #FFFFFF;
-}
+
 
 button:has(img){
     background: none;
@@ -22,16 +19,20 @@ button:has(img){
 	cursor: pointer;
     align-self: center;
     justify-self: center;
-    border: 1px solid #FFFFFF;
+    width: 25px;
+    height: 30px;
 } 
 button:has(img):hover{
-    border: 1px solid;
-    border-radius: 17px;
+    position: relative;
+}
+button:has(img) img:hover{
+    height: 27px;
 }
 
 
-.title{
-    padding: 15px;
+
+.menu .title{
+    padding: 10px;
 }
 .menu{
    grid-row: 1/3;
@@ -39,25 +40,27 @@ button:has(img):hover{
    flex-direction: column;
    background-color: #1AA3D9;
    color: #FFFFFF;
-   font-size: 25px;
+   font-size: 21px;
 }
 .menu>*{
     margin-top: 50px;
     display: grid;
-    gap: 10px;
 }
 .navigation,
 .settings{
-    padding: 15px;
+    padding: 10px;
 }
-.settings>*,
-.navigation>*{
+.settings>div,
+.navigation>div{
     display: flex;
 }
-.settings>*>*,
-.navigation>*>*{
-    margin-right: 20px;
+a{
+    text-decoration: none;
+    color: #FFFFFF;
+    padding:5px;
 }
+
+
 
 
 
@@ -67,22 +70,46 @@ button:has(img):hover{
     grid-column: 2/3;
     display: grid;
     grid-template-columns: 5fr 2fr;
-    grid-template-rows: 3fr 5fr;
-    gap: 10px;
-    padding: 15px;
-}
-.header>*{
-    /* border: 1px solid black; */
+    grid-template-rows: 1fr 2fr;
 }
 .search-bar{
     display: grid;
-    grid-template-columns: 1fr 7fr;
+    grid-template-columns: 1fr 9fr;
+    height: 50px;
 }
 input{
     grid-column: 2/3;
     border-radius: 20px;
     margin: 10px;
     background-color: #E2E8F0;
+    font-size: 18px;
+}
+.user{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 20px;
+}
+.user>img[src^="img"]{
+    height: 35px;
+    border: 1px solid;
+    border-radius: 25px;
+}
+.user-info>img{
+    height: 55px;
+    margin-left: 10px;
+    align-self: center;
+    border: 1px solid;
+    border-radius: 27px;
+}
+.user-info{
+    display: flex;
+}
+.user-info>div{
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+    justify-content: center;
 }
 .buttons{
     display: flex;
@@ -103,58 +130,35 @@ input{
     background-color: #FFFFFF;
     color: #1AA3D9;
 }
-.user{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    font-size: 25px;
-}
-.user>img[src^="sgv"]{
-    height: 35px;
-}
-.user>img[src^="img"]{
-    height: 45px;
-    border: 1px solid;
-    border-radius: 25px;
-}
-.user-info>img{
-    height: 70px;
-    margin-left: 10px;
-    align-self: center;
-}
-.user-info{
-    display: flex;
-}
-.user-info>div{
-    display: flex;
-    flex-direction: column;
-    margin-left: 20px;
-    justify-content: center;
-}
 
 
 
-.main>*{
-    /* border: 1px solid black; */
-}
+
 .main{
     display: grid;
-    grid-template-columns: 4fr 2fr;
+    grid-template-columns: 5fr 2fr;
+    grid-template-rows: 100px 1fr;
     background-color: #E2E8F0;
+    padding-top: 20px;
 }
 .projects{
-    margin-top: 20px;
+    grid-column: 1/2;
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
-    gap: 20px;
-    padding: 20px;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 40px;
+    padding: 30px;
+}
+.main .your-projects{
+    grid-column: 1/4;
+    padding-left: 20px;
+    font-size: 25px;
 }
 .card{
     border-radius: 20px;
-    /* border: 1px solid black; */
     background-color: #FFFFFF;
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: 1fr 9fr;
+    min-width: 200px;
 }
 .spacer{
     grid-column: 1/2;
@@ -164,28 +168,50 @@ input{
 }
 .card>.content,
 .card>.title{
-    padding: 20px;
+    padding: 10px;
     margin-left: 10px;
 }
 .content{
-    font-size: 15px;
+    font-size: 18px;
     font-weight: lighter;
 }
 .options{
     display: flex;
     justify-content: flex-end;
     margin-right: 20px;
-    padding: 10px;
-}
-.options>img{
     padding: 5px;
 }
 
 
 .side{
-    padding: 20px;
+    grid-column: 2/3;
+    display: grid;
+    grid-template-rows: 60px 1fr 60px;
+    gap: 20px;
+    padding: 10px;
 }
-.side>*{
-    /* border: 1px solid black; */
+.subtitle{
+    font-size: 25px;
+    padding: 15px;
+}
+.annauncements .title,
+.trending .title{
+    font-size: 18px;
+    font-weight: bold;
+}
+.annauncements,
+.trending{
     background-color: #FFFFFF;
+    font-size: 16px;
+    font-weight: lighter;
+    border-radius: 10px;
+    padding: 10px;
+}
+.trending .user{
+    display: flex;
+    justify-content: space-evenly;
+}
+.trending .user>img[src^="img"]{
+    height: 40px;
+    border-radius: 35px;
 }
